package com.diguage.didp.flyweight;

/**
 * FlyWeight 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-23 09:09:48
 */
public abstract class FlyWeight {
  public abstract void operation(int extrinsticState);
}
